# titanic

./: README.md  pyproject.toml  titanic.csv
